fix: corregir bugs relacionats amb pantalles interactives